--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
     "name": "Bgt Ban All Bot",
-    "description": "https://te.legra.ph/file/f73af9a4ffe130a83d8d2.jpg",
+    "description": "Ban All Bot",
     "repository": "https://github.com/BikashhalderNew/BanAllBot",
-    "logo": "",
+    "logo": "https://te.legra.ph/file/f73af9a4ffe130a83d8d2.jpg",
     "keywords": [
         "python",
         "telegram"
