--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
         "telegram"
     ],
     "buildpacks": [{
-    "url": "heroku-22/python"
+    "url": "heroku"
   }],
     "formation": {
         "worker": {
