--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Bgt Ban All Bot",
+    "name": "ᴛᴅʙᴀɴᴀʟʟʙᴏᴛ",
     "description": "Ban All Bot",
-    "repository": "https://github.com/BikashhalderNew/BanAllBot",
+    "repository": "https://github.com/Vasi420/BanAllBot",
     "logo": "https://te.legra.ph/file/f73af9a4ffe130a83d8d2.jpg",
     "keywords": [
         "python",
